# hc32f448_pac

./: Cargo.toml  README.md  device.x  gen.bat
src/: adc1.rs  adc2.rs  adc3.rs  aes.rs  aos.rs  cmp3.rs  cmu.rs  crc.rs  ctc.rs  dac.rs  dbgc.rs  dcu1.rs  dma1.rs  efm.rs  emb0.rs  emb1.rs  fcm.rs  gpio.rs  hash.rs  i2c1.rs  icg.rs  intc.rs  keyscan.rs  lib.rs  mcan1.rs  peric.rs  pwc.rs  qspi.rs  rmu.rs  rtc.rs  smc.rs  spi1.rs  sramc.rs  tmr01.rs  tmr43.rs  tmr61.rs  tmr6_common.rs  tmra1.rs  trng.rs  usart1.rs  (+2 more)
src/adc1/: avchselr.rs  awd1dr1.rs  awdsr.rs  chmuxr3.rs  chselra.rs  chselrb.rs  cr0.rs  dr1.rs  dr12.rs  dr13.rs  dr14.rs  dr15.rs  dr8.rs  dr9.rs  sstr10.rs  sstr12.rs  sstr13.rs  sstr14.rs  sstr15.rs  sstr2.rs  sstr3.rs  sstr4.rs  sstr5.rs  sstr9.rs  synccr.rs  trgsr.rs
src/adc2/: avchselr.rs  awd0dr1.rs  awd1chsr.rs  awd1dr0.rs  awdcr.rs  chmuxr0.rs  chmuxr1.rs  chselra.rs  chselrb.rs  cr1.rs  dr0.rs  dr2.rs  dr6.rs  exchselr.rs  icr.rs  isclrr.rs  isr.rs  sstr1.rs  sstr6.rs  str.rs
src/adc3/: avchselr.rs  awd0chsr.rs  awd0dr0.rs  awdsclrr.rs  chmuxr2.rs  chselra.rs  chselrb.rs  cr2.rs  dr10.rs  dr11.rs  dr3.rs  dr4.rs  dr5.rs  dr7.rs  sstr0.rs  sstr11.rs  sstr7.rs  sstr8.rs
src/aes/: cr.rs  dr1.rs  dr3.rs  kr0.rs  kr1.rs  kr2.rs  kr3.rs  kr4.rs  kr5.rs  kr6.rs  kr7.rs
src/aos/: adc1_trgsel0.rs  adc1_trgsel1.rs  adc2_trgsel0.rs  adc2_trgsel1.rs  adc3_trgsel0.rs  adc3_trgsel1.rs  comtrgsel1.rs  comtrgsel2.rs  dcu_trgsel1.rs  dcu_trgsel2.rs  dcu_trgsel3.rs  dcu_trgsel4.rs  dma1_trgsel0.rs  (+74 more)
svd/: CMSIS-SVD_Schema_1_1.xsd  HC32F448_patch.svd
(+841 files in other folders)
