[package]
name = "hc32f448_pac"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", optional = true }
vcell = "0.1.3"
portable-atomic = {version = "1.13.1", default-features = false}

[features]
rt = ["cortex-m-rt/device"]

[lints.rust]
unsafe_op_in_unsafe_fn = "allow"
